Fix if a sidebar scrolling if it is too long

--- a/_sass/components/_sidebar.scss
+++ b/_sass/components/_sidebar.scss
@@ -6,8 +6,10 @@
 }
 
 .page-sidebar {
+    height: 100vh;
     position: -webkit-sticky;
     position: sticky;
+    overflow: auto;
     top: 20px;
 
     a {
